--- a/typography.html
+++ b/typography.html
@@ -14,61 +14,152 @@
 </head>
 
 <body>
-      <header class="header">
-            <nav class="header__navigation">
-                  <a class="header__navigation-logo" href=""></a>
-                  <ul class="header__navigation-list">
-                        <li class="header__navigation-menu">Типографика
-                              <ul class="header__menu-list">
-                                    <li>Заголовки</li>
-                                    <li>Текст</li>
-                                    <li>Технические</li>
-                                    <li>Span</li>
-                              </ul>
-                        </li>
-                        <li class="header__navigation-menu">Элементы формы
-                              <ul class="header__menu-list">
-                                    <li>Поля</li>
-                                    <li>Селекты</li>
-                                    <li>Дропдауны</li>
-                                    <li>Кнопки</li>
-                                    <li>Сообщения</li>
-                                    <li>Дополнительно</li>
-                              </ul>
-                        </li>
-                        <li class="header__navigation-menu">Модальные окна
-                              <ul class="header__menu-list">
-                                    <li>Уведомления</li>
-                                    <li>Окна</li>
-                              </ul>
-                        </li>
-                        <li class="header__navigation-menu">Блоки
-                              <ul class="header__menu-list">
-                                    <li>Хедеры</li>
-                                    <li>Футеры</li>
-                                    <li>Остальное</li>
-                              </ul>
-                        </li>
-                        <li class="header__navigation-menu">Компоненты
-                              <ul class="header__menu-list">
-                                    <li>Тултипы</li>
-                                    <li>Табы</li>
-                                    <li>Теги</li>
-                                    <li>Процесс-бары</li>
-                                    <li>Карточки</li>
-                              </ul>
-                        </li>
-                        <li class="header__navigation-menu">Иконки
-                              <ul class="header__menu-list">
-                                    <li>Стандартный набор</li>
-                                    <li>Социальные сети</li>
-                                    <li>Флаги</li>
-                              </ul>
-                        </li>
-                  </ul>
+      <div class="typography__flex-container">
+            <header class="header">
+                  <nav class="header__navigation">
+                        <a class="header__navigation-logo" href=""></a>
+                        <ul class="header__navigation-menu">
+                              <li class="header__navigation-menu-item">Типографика
+                                    <ul class="header__navigation-list">
+                                          <li class="header__navigation-item">Заголовки</li>
+                                          <li class="header__navigation-item">Текст</li>
+                                          <li class="header__navigation-item">Технические</li>
+                                          <li class="header__navigation-item">Span</li>
+                                    </ul>
+                              </li>
+                              <li class="header__navigation-menu-item">Элементы формы
+                                    <ul class="header__navigation-list">
+                                          <li class="header__navigation-item">Поля</li>
+                                          <li class="header__navigation-item">Селекты</li>
+                                          <li class="header__navigation-item">Дропдауны</li>
+                                          <li class="header__navigation-item">Кнопки</li>
+                                          <li class="header__navigation-item">Сообщения</li>
+                                          <li class="header__navigation-item">Дополнительно</li>
+                                    </ul>
+                              </li>
+                              <li class="header__navigation-menu-item">Модальные окна
+                                    <ul class="header__navigation-list">
+                                          <li class="header__navigation-item">Уведомления</li>
+                                          <li class="header__navigation-item">Окна</li>
+                                    </ul>
+                              </li>
+                              <li class="header__navigation-menu-item">Блоки
+                                    <ul class="header__navigation-list">
+                                          <li class="header__navigation-item">Хедеры</li>
+                                          <li class="header__navigation-item">Футеры</li>
+                                          <li class="header__navigation-item">Остальное</li>
+                                    </ul>
+                              </li>
+                              <li class="header__navigation-menu-item">Компоненты
+                                    <ul class="header__navigation-list">
+                                          <li class="header__navigation-item">Тултипы</li>
+                                          <li class="header__navigation-item">Табы</li>
+                                          <li class="header__navigation-item">Теги</li>
+                                          <li class="header__navigation-item">Процесс-бары</li>
+                                          <li class="header__navigation-item">Карточки</li>
+                                    </ul>
+                              </li>
+                              <li class="header__navigation-menu-item">Иконки
+                                    <ul class="header__navigation-list">
+                                          <li class="header__navigation-item">Стандартный набор</li>
+                                          <li class="header__navigation-item">Социальные сети</li>
+                                          <li class="header__navigation-item">Флаги</li>
+                                    </ul>
+                              </li>
+                        </ul>
 
-            </nav>
-      </header>
+                  </nav>
+            </header>
+            <main class="typography">
+                  <header class="typography__header">
+                        <h1 class="typography__header-headline">Типографика</h1>
+                        <p class="typography__header-subtitle">Текстовые стили делятся на контентные и технические.
+                              Рекомендуется использовать в проекте не более
+                              6 размеров шрифта, исключая особые случаи.</p>
+                  </header>
+                  <section class="typography__tittle-style">
+                        <h2 class="visually-hidden">Заголовки</h2>
+                        <table class="typography__tittle-style-table">
+                              <caption class="typography__tittle-style-headline">Заголовки</caption>
+                              <tr class="typography__tittle-style-1">
+                                    <td class="">H1</td>
+                                    <td class="">Заголовок</td>
+                              </tr>
+                              <tr class="typography__tittle-style-2">
+                                    <td class="">H2</td>
+                                    <td class="">Заголовок второго уровня</td>
+                              </tr>
+                              <tr class="typography__tittle-style-3">
+                                    <td class="">H3</td>
+                                    <td class=""><span>Заголовок третьего уровня</span>
+                                          <span>Заголовок третьего уровня</span>
+                                    </td>
+                              </tr>
+                        </table>
+                  </section>
+                  <section class="typography__text-style">
+                        <h2 class="visually-hidden">Текст</h2>
+                        <table class="typography__text-style-table">
+                              <caption class="typography__text-style-headline">Текст</caption>
+                              <tr class="typography__text-style-subtitle">
+                                    <td class="">Подзаголовок</td>
+                                    <td class="">Речь зашла об одном из соседних помещиков. «Дрянь, аристократишко», —
+                                          равнодушно заметил Базаров, который встречался с ним в Петербурге.</td>
+                              </tr>
+                              <tr class="typography__tittle-style-paragraph">
+                                    <td class="">Параграф</td>
+                                    <td class="">Прогуляться собираетесь? Вечерок-то будет хорош, только грозы бы вот не
+                                          было.
+                                          А впрочем, и лучше, кабы освежило... И вдруг Раскольникову ясно припомнилась
+                                          вся
+                                          сцена третьего дня под воротами; он сообразил, что кроме дворников там стояло
+                                          тогда
+                                          еще несколько человек, стояли и женщины. Он припомнил один голос, предлагавший
+                                          вести
+                                          его прямо в квартал. Лицо говорившего не мог он вспомнить и даже теперь не
+                                          признавал, но ему памятно было, что он даже что-то ответил ему тогда,
+                                          обернулся к
+                                          нему...</td>
+                              </tr>
+                        </table>
+                  </section>
+                  <section class="typography__tech-style">
+                        <h2 class="visually-hidden">Технические</h2>
+                        <table class="typography__tech-style-table">
+                              <caption class="typography__tech-style-headline">Технические</caption>
+                              <tr class="typography__tech-style-link">
+                                    <td class="">Ссылка</td>
+                                    <td class="">Перейти на сайт Студии</td>
+                              </tr>
+                              <tr class="typography__tech-style-auxiliary">
+                                    <td class="">Вспомогательный</td>
+                                    <td class="">Photo: Getty Images / Ilnur Kalimullin</td>
+                              </tr>
+                              <tr class="typography__tech-style-label">
+                                    <td class="">Лейбл</td>
+                                    <td class="">НАЗВАНИЕ КОМПАНИИ</td>
+                              </tr>
+                        </table>
+
+                  </section>
+                  <section class="typography__span-style">
+                        <h2 class="visually-hidden">Span</h2>
+                        <table class="typography__span-style-table">
+                              <caption class="typography__span-style-headline">Технические</caption>
+                              <tr class="typography__span-style-marker">
+                                    <td class="">Верхний регистр и курсив</td>
+                                    <td class="">ПЮНЕСКО — специализированное учреждение Организации Объединённых Наций
+                                          по
+                                          вопросам образования, науки и культуры</td>
+                              </tr>
+                              <tr class="typography__span-style-link">
+                                    <td class="">Ссылка</td>
+                                    <td class="">Посмотреть результаты отбора можно на сайте нашей Студии</td>
+                              </tr>
+                        </table>
+                  </section>
+            </main>
+      </div>
 </body>
 
 </html>
