чуть-чуть стилизации подключила нормалайз разобраться с полосой прокрутки доделать разметку

--- a/typography.html
+++ b/typography.html
@@ -9,25 +9,25 @@
       <meta name="description" content="">
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
-      <link href="" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title></title>
 </head>
 
 <body>
       <div class="typography__flex-container">
-            <header class="header">
+            <header class="typography__header">
                   <nav class="header__navigation">
                         <a class="header__navigation-logo" href=""></a>
                         <ul class="header__navigation-menu">
-                              <li class="header__navigation-menu-item">Типографика
+                              <li><a class="header__navigation-menu-item">Типографика</a>
                                     <ul class="header__navigation-list">
-                                          <li class="header__navigation-item">Заголовки</li>
-                                          <li class="header__navigation-item">Текст</li>
-                                          <li class="header__navigation-item">Технические</li>
-                                          <li class="header__navigation-item">Span</li>
+                                          <li><a class="header__navigation-item">Заголовки</a></li>
+                                          <li><a class="header__navigation-item">Текст</a></li>
+                                          <li><a class="header__navigation-item">Технические</a></li>
+                                          <li><a class="header__navigation-item">Span</a></li>
                                     </ul>
                               </li>
-                              <li class="header__navigation-menu-item">Элементы формы
+                              <li><a class="header__navigation-menu-item">Элементы формы</a>
                                     <ul class="header__navigation-list">
                                           <li class="header__navigation-item">Поля</li>
                                           <li class="header__navigation-item">Селекты</li>
@@ -37,20 +37,20 @@
                                           <li class="header__navigation-item">Дополнительно</li>
                                     </ul>
                               </li>
-                              <li class="header__navigation-menu-item">Модальные окна
+                              <li><a class="header__navigation-menu-item">Модальные окна</a>
                                     <ul class="header__navigation-list">
                                           <li class="header__navigation-item">Уведомления</li>
                                           <li class="header__navigation-item">Окна</li>
                                     </ul>
                               </li>
-                              <li class="header__navigation-menu-item">Блоки
+                              <li><a class="header__navigation-menu-item">Блоки</a>
                                     <ul class="header__navigation-list">
                                           <li class="header__navigation-item">Хедеры</li>
                                           <li class="header__navigation-item">Футеры</li>
                                           <li class="header__navigation-item">Остальное</li>
                                     </ul>
                               </li>
-                              <li class="header__navigation-menu-item">Компоненты
+                              <li><a class="header__navigation-menu-item">Компоненты</a>
                                     <ul class="header__navigation-list">
                                           <li class="header__navigation-item">Тултипы</li>
                                           <li class="header__navigation-item">Табы</li>
@@ -59,7 +59,7 @@
                                           <li class="header__navigation-item">Карточки</li>
                                     </ul>
                               </li>
-                              <li class="header__navigation-menu-item">Иконки
+                              <li><a class="header__navigation-menu-item">Иконки</a>
                                     <ul class="header__navigation-list">
                                           <li class="header__navigation-item">Стандартный набор</li>
                                           <li class="header__navigation-item">Социальные сети</li>
@@ -70,8 +70,8 @@
 
                   </nav>
             </header>
-            <main class="typography">
-                  <header class="typography__header">
+            <main class="typography__main">
+                  <header class="typography__main-header">
                         <h1 class="typography__header-headline">Типографика</h1>
                         <p class="typography__header-subtitle">Текстовые стили делятся на контентные и технические.
                               Рекомендуется использовать в проекте не более
