--- a/typography.html
+++ b/typography.html
@@ -17,7 +17,8 @@
       <div class="typography__flex-container">
             <header class="typography__header">
                   <nav class="header__navigation">
-                        <a class="header__navigation-logo" href=""></a>
+                        <a class="header__navigation-logo" href=""><img class="header__navigation-logo-image"
+                                    src="img/blue-logo.svg" width="105" height="30" alt="Логотип"></a>
                         <ul class="header__navigation-menu">
                               <li><a class="header__navigation-menu-item">Типографика</a>
                                     <ul class="header__navigation-list">
