начало стилизации main

--- a/typography.html
+++ b/typography.html
@@ -20,51 +20,51 @@
                         <a class="header__navigation-logo" href=""><img class="header__navigation-logo-image"
                                     src="img/blue-logo.svg" width="105" height="30" alt="Логотип"></a>
                         <ul class="header__navigation-menu">
-                              <li><a class="header__navigation-menu-item">Типографика</a>
+                              <li><a class="header__navigation-menu-item--current" href="">Типографика</a>
                                     <ul class="header__navigation-list">
-                                          <li><a class="header__navigation-item">Заголовки</a></li>
-                                          <li><a class="header__navigation-item">Текст</a></li>
-                                          <li><a class="header__navigation-item">Технические</a></li>
-                                          <li><a class="header__navigation-item">Span</a></li>
+                                          <li><a class="header__navigation-item" href="">Заголовки</a></li>
+                                          <li><a class="header__navigation-item" href="">Текст</a></li>
+                                          <li><a class="header__navigation-item" href="">Технические</a></li>
+                                          <li><a class="header__navigation-item" href="">Span</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item">Элементы формы</a>
+                              <li><a class="header__navigation-menu-item" href="">Элементы формы</a>
                                     <ul class="header__navigation-list">
-                                          <li class="header__navigation-item">Поля</li>
-                                          <li class="header__navigation-item">Селекты</li>
-                                          <li class="header__navigation-item">Дропдауны</li>
-                                          <li class="header__navigation-item">Кнопки</li>
-                                          <li class="header__navigation-item">Сообщения</li>
-                                          <li class="header__navigation-item">Дополнительно</li>
+                                          <li><a class="header__navigation-item" href="">Поля</a></li>
+                                          <li><a class="header__navigation-item" href="">Селекты</a></li>
+                                          <li><a class="header__navigation-item" href="">Дропдауны</a></li>
+                                          <li><a class="header__navigation-item" href="">Кнопки</a></li>
+                                          <li><a class="header__navigation-item" href="">Сообщения</a></li>
+                                          <li><a class="header__navigation-item" href="">Дополнительно</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item">Модальные окна</a>
+                              <li><a class="header__navigation-menu-item" href="">Модальные окна</a>
                                     <ul class="header__navigation-list">
-                                          <li class="header__navigation-item">Уведомления</li>
-                                          <li class="header__navigation-item">Окна</li>
+                                          <li><a class="header__navigation-item" href="">Уведомления</a></li>
+                                          <li><a class="header__navigation-item" href="">Окна</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item">Блоки</a>
+                              <li><a class="header__navigation-menu-item" href="">Блоки</a>
                                     <ul class="header__navigation-list">
-                                          <li class="header__navigation-item">Хедеры</li>
-                                          <li class="header__navigation-item">Футеры</li>
-                                          <li class="header__navigation-item">Остальное</li>
+                                          <li><a class="header__navigation-item" href="">Хедеры</a></li>
+                                          <li><a class="header__navigation-item" href="">Футеры</a></li>
+                                          <li><a class="header__navigation-item" href="">Остальное</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item">Компоненты</a>
+                              <li><a class="header__navigation-menu-item" href="">Компоненты</a>
                                     <ul class="header__navigation-list">
-                                          <li class="header__navigation-item">Тултипы</li>
-                                          <li class="header__navigation-item">Табы</li>
-                                          <li class="header__navigation-item">Теги</li>
-                                          <li class="header__navigation-item">Процесс-бары</li>
-                                          <li class="header__navigation-item">Карточки</li>
+                                          <li><a class="header__navigation-item" href="">Тултипы</a></li>
+                                          <li><a class="header__navigation-item" href="">Табы</a></li>
+                                          <li><a class="header__navigation-item" href="">Теги</a></li>
+                                          <li><a class="header__navigation-item" href="">Процесс-бары</a></li>
+                                          <li><a class="header__navigation-item" href="">Карточки</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item">Иконки</a>
+                              <li><a class="header__navigation-menu-item" href="">Иконки</a>
                                     <ul class="header__navigation-list">
-                                          <li class="header__navigation-item">Стандартный набор</li>
-                                          <li class="header__navigation-item">Социальные сети</li>
-                                          <li class="header__navigation-item">Флаги</li>
+                                          <li><a class="header__navigation-item" href="">Стандартный набор</a></li>
+                                          <li><a class="header__navigation-item" href="">Социальные сети</a></li>
+                                          <li><a class="header__navigation-item" href="">Флаги</a></li>
                                     </ul>
                               </li>
                         </ul>
