страница типографии. доделать поплы прокрутки и пиксель перфект

--- a/typography.html
+++ b/typography.html
@@ -82,17 +82,17 @@
                         <h2 class="visually-hidden">Заголовки</h2>
                         <table class="typography__tittle-style-table">
                               <caption class="typography__tittle-style-headline">Заголовки</caption>
-                              <tr class="typography__tittle-style-1">
-                                    <td class="">H1</td>
-                                    <td class="">Заголовок</td>
+                              <tr class="typography__tittle-style-h1">
+                                    <td class="typography__tittle-style-name">H1</td>
+                                    <td class="typography__tittle-h1">Заголовок</td>
                               </tr>
-                              <tr class="typography__tittle-style-2">
-                                    <td class="">H2</td>
-                                    <td class="">Заголовок второго уровня</td>
+                              <tr class="typography__tittle-style-h2">
+                                    <td class="typography__tittle-style-name">H2</td>
+                                    <td class="typography__tittle-h2">Заголовок второго уровня</td>
                               </tr>
-                              <tr class="typography__tittle-style-3">
-                                    <td class="">H3</td>
-                                    <td class=""><span>Заголовок третьего уровня</span>
+                              <tr class="typography__tittle-style-h3">
+                                    <td class="typography__tittle-style-name">H3</td>
+                                    <td class="typography__tittle-h3"><span>Заголовок третьего уровня</span>
                                           <span>Заголовок третьего уровня</span>
                                     </td>
                               </tr>
@@ -103,13 +103,15 @@
                         <table class="typography__text-style-table">
                               <caption class="typography__text-style-headline">Текст</caption>
                               <tr class="typography__text-style-subtitle">
-                                    <td class="">Подзаголовок</td>
-                                    <td class="">Речь зашла об одном из соседних помещиков. «Дрянь, аристократишко», —
+                                    <td class="typography__text-style-name">Подзаголовок</td>
+                                    <td class="typography__text-subtitle">Речь зашла об одном из соседних помещиков.
+                                          «Дрянь, аристократишко», —
                                           равнодушно заметил Базаров, который встречался с ним в Петербурге.</td>
                               </tr>
-                              <tr class="typography__tittle-style-paragraph">
-                                    <td class="">Параграф</td>
-                                    <td class="">Прогуляться собираетесь? Вечерок-то будет хорош, только грозы бы вот не
+                              <tr class="typography__text-style-paragraph">
+                                    <td class="typography__text-style-name">Параграф</td>
+                                    <td class="typography__text-paragraph">Прогуляться собираетесь? Вечерок-то будет
+                                          хорош, только грозы бы вот не
                                           было.
                                           А впрочем, и лучше, кабы освежило... И вдруг Раскольникову ясно припомнилась
                                           вся
@@ -129,16 +131,17 @@
                         <table class="typography__tech-style-table">
                               <caption class="typography__tech-style-headline">Технические</caption>
                               <tr class="typography__tech-style-link">
-                                    <td class="">Ссылка</td>
-                                    <td class="">Перейти на сайт Студии</td>
+                                    <td class="typography__tech-style-name">Ссылка</td>
+                                    <td class="typography__tech-link"><a class="typography__tech-link-a" href="">Перейти
+                                                на сайт Студии</a></td>
                               </tr>
                               <tr class="typography__tech-style-auxiliary">
-                                    <td class="">Вспомогательный</td>
-                                    <td class="">Photo: Getty Images / Ilnur Kalimullin</td>
+                                    <td class="typography__tech-style-name">Вспомогательный</td>
+                                    <td class="typography__tech-auxiliary">Photo: Getty Images / Ilnur Kalimullin</td>
                               </tr>
                               <tr class="typography__tech-style-label">
-                                    <td class="">Лейбл</td>
-                                    <td class="">НАЗВАНИЕ КОМПАНИИ</td>
+                                    <td class="typography__tech-style-name">Лейбл</td>
+                                    <td class="typography__tech-label">НАЗВАНИЕ КОМПАНИИ</td>
                               </tr>
                         </table>
 
@@ -148,14 +151,19 @@
                         <table class="typography__span-style-table">
                               <caption class="typography__span-style-headline">Технические</caption>
                               <tr class="typography__span-style-marker">
-                                    <td class="">Верхний регистр и курсив</td>
-                                    <td class="">ПЮНЕСКО — специализированное учреждение Организации Объединённых Наций
+                                    <td class="typography__span-style-name">Верхний регистр и курсив</td>
+                                    <td class="typography__span-marker"><span
+                                                class="typography__span-uppercase">ЮНЕСКО</span> —
+                                          специализированное учреждение
+                                          <em class="typography__span-italic">Организации Объединённых Наций</em>
                                           по
                                           вопросам образования, науки и культуры</td>
                               </tr>
                               <tr class="typography__span-style-link">
-                                    <td class="">Ссылка</td>
-                                    <td class="">Посмотреть результаты отбора можно на сайте нашей Студии</td>
+                                    <td class="typography__span-style-name">Ссылка</td>
+                                    <td class="typography__span-link">Посмотреть результаты отбора можно <a
+                                                class="typography__span-link-a" href="">на сайте нашей
+                                                Студии</a></td>
                               </tr>
                         </table>
                   </section>
