--- a/typography.html
+++ b/typography.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-      <title></title>
+      <title>stride-design-system/typography</title>
 </head>
 
 <body>
