небольшие правки и новый html файл

--- a/form-elements.html
+++ b/form-elements.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-      <title>stride-design-system/typography</title>
+      <title>stride-design-system/fotm-elements</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                         <a class="header__navigation-logo" href=""><img class="header__navigation-logo-image"
                                     src="img/blue-logo.svg" width="105" height="30" alt="Логотип"></a>
                         <ul class="header__navigation-menu">
-                              <li><a class="header__navigation-menu-item--current" href="">Типографика</a>
+                              <li><a class="header__navigation-menu-item" href="">Типографика</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Заголовки</a></li>
                                           <li><a class="header__navigation-item" href="">Текст</a></li>
@@ -28,7 +28,7 @@
                                           <li><a class="header__navigation-item" href="">Span</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item" href="">Элементы формы</a>
+                              <li><a class="header__navigation-menu-item--current" href="">Элементы формы</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Поля</a></li>
                                           <li><a class="header__navigation-item" href="">Селекты</a></li>
@@ -71,14 +71,12 @@
 
                   </nav>
             </header>
-            <main class="typography__main">
-                  <header class="typography__main-header">
-                        <h1 class="typography__header-headline">Типографика</h1>
-                        <p class="typography__header-subtitle">Текстовые стили делятся на контентные и технические.
-                              Рекомендуется использовать в проекте не более
-                              6 размеров шрифта, исключая особые случаи.</p>
+            <main class="form-elements__main">
+                  <header class="form-elements__main-header">
+                        <h1 class="form-elements__header-headline">Элементы формы</h1>
+                        <p class="form-elements__header-subtitle">Формы — важная часть любого интерфейса.</p>
                   </header>
-                  <section class="typography__tittle-style">
+                  <!-- <section class="typography__tittle-style">
                         <h2 class="visually-hidden">Заголовки</h2>
                         <table class="typography__tittle-style-table">
                               <caption class="typography__tittle-style-headline">Заголовки</caption>
@@ -166,7 +164,7 @@
                                                 Студии</a></td>
                               </tr>
                         </table>
-                  </section>
+                  </section> -->
             </main>
       </div>
 </body>
