--- a/form-elements.html
+++ b/form-elements.html
@@ -805,6 +805,34 @@
                                           </td>
 
                                     </tr>
+                                    <tr class="form-elements__addition-style-radio">
+                                          <td class="form-elements__addition-style-name">Радио</td>
+                                          <td class="form-elements__addition-style-content">
+                                                <div class="form-elements__addition-wrapper">
+                                                      <form class="form-elements__addition-form">
+                                                            <ul class="form-elements__addition-radio">
+                                                                  <li class="addition-radio__option1">
+                                                                        <input class="visually-hidden addition-radio__option-input"
+                                                                              type="radio" name="option" value="one"
+                                                                              id="addition-radio__option-input1">
+                                                                        <label class="addition-radio__input-label"
+                                                                              for="addition-radio__option-input1">Первый
+                                                                              вариант</label>
+                                                                  </li>
+                                                                  <li class="addition-radio__option2">
+                                                                        <input class="visually-hidden addition-radio__option-input"
+                                                                              type="radio" name="option" value="two"
+                                                                              id="addition-radio__option-input2">
+                                                                        <label class="addition-radio__input-label"
+                                                                              for="addition-radio__option-input2">Второй
+                                                                              вариант</label>
+                                                                  </li>
+                                                            </ul>
+                                                      </form>
+                                                </div>
+                                          </td>
+
+                                    </tr>
                               </table>
                         </section>
 
