--- a/modal-map.html
+++ b/modal-map.html
@@ -234,7 +234,7 @@
                   </div>
             </main>
       </div>
-      <script src="js/scripts.js"></script>
+      <script src="js/modal.js"></script>
 </body>
 
 </html>
